# fim

./: Arg.cpp  Arg.h  BUGS  Browser.cpp  Browser.h  ChangeLog  Command.cpp  Command.h  CommandConsole.cpp  CommandConsole.h  Dockerfile  FAQ.TXT  FIM.TXT  INSTALL  Image.cpp  Image.h  Makefile  Makefile.am  Makefile.in  NEWS  NEWS.in  README  README.FIRST  README.md  THANKS  TODO  VERSION  Var.cpp  Var.h  autogen.sh  changelog  common.c  common.cpp  common.h  config.h.in  configure.ac  defaultConfiguration.cpp  extern.h  fbgs.sh  fim.cpp  (+13 more)
branches/0.3/: ChangeLog  Makefile.am  NEWS  README  TODO
branches/0.3-beta-prerelease/: BUGS  INSTALL.TXT  Makefile.am  README  configure.ac
branches/0.3-beta-prerelease/debian/: changelog  control  files  rules  substvars  watch
branches/0.3-beta-prerelease/doc/: FIM.TXT  Makefile.am  Makefile.old  fim.man  fimrc.man
branches/0.3-beta-prerelease/src/: AADevice.cpp  AADevice.h  Arg.h  Browser.cpp  Browser.h  CACADevice.cpp  Cache.cpp  Command.cpp  Command.h  CommandConsole-cmd.cpp  CommandConsole.cpp  CommandConsole.h  DebugConsole.cpp  FbiStuff.cpp  FbiStuffBit1.cpp  FbiStuffBit24.cpp  FbiStuffBmp.cpp  FbiStuffDjvu.cpp  FbiStuffFbtools.cpp  FbiStuffGif.cpp  FbiStuffLoader.cpp  Image.h  (+28 more)
branches/0.4/: BUGS  ChangeLog  Makefile.am  NEWS  README  TODO  VERSION  configure.ac
branches/0.5/: BUGS  INSTALL.TXT  Makefile.am  NEWS  TODO  configure.ac
branches/0.6/: Dockerfile  Makefile.am  NEWS  NEWS.in  README  README.md  VERSION  configure.ac
branches/0.6/src/: AADevice.cpp  Browser.cpp  CACADevice.h  Cache.cpp  Command.cpp  CommandConsole.h  FbiStuff.cpp  FbiStuffBit24.cpp  FbiStuffFbtools.cpp  FbiStuffJasPer.cpp  FbiStuffLoader.cpp  FbiStuffPcx.cpp  FbiStuffPng.cpp  FbiStuffPpm.cpp  FbiStuffPs.cpp  FbiStuffTiff.cpp  FbiStuffUFRaw.cpp  FontServer.cpp  FontServer.h  FramebufferDevice.cpp  FramebufferDevice.h  Image.cpp  Image.h  Makefile.am  Namespace.cpp  Namespace.h  SDLDevice.cpp  SDLDevice.h  Var.h  Viewport.cpp  Viewport.h  common.cpp  common.h  fim.h  fim_stream.cpp  lex.h  lex.lex  readline.cpp  readline.h
branches/0.6/src/testdir/: test14.ok  test20.ok
debian/: .rules.swo  changelog  control  copyright  docs  fim.substvars  menu.ex  postrm.ex  prerm.ex  rules
distros/: Makefile.am  fim-0.1_alpha.ebuild
distros/fedora/: fim.spec
doc/: FIM.TXT  Makefile.am  Makefile.old  fim.man  fim.man.in  fimgs.man  fimgs.man.in  fimrc.man  fimrc.man.in  vim2html.pl
mk/: Autoconf.mk  Maintainer.mk  Variables.mk
scripts/: Makefile.am
scripts/maintenance/: configure-live.sh  configure-minimal.sh  configure-noscripting.sh  cron-build.sh.in  live-test.sh  mkfimbuildbots.sh  yacc2grammar.awk
scripts/tests/: font.sh  sanity.fim
scripts/utilities/: screenshot.sh
src/: AADevice.cpp  AADevice.h  Arg.cpp  Arg.h  Browser.cpp  Browser.h  CACADevice.cpp  CACADevice.h  Cache.cpp  Cache.h  Command.cpp  Command.h  CommandConsole-cmd.cpp  CommandConsole-help.cpp  CommandConsole-init.cpp  CommandConsole-var.cpp  CommandConsole.cpp  CommandConsole.h  DebugConsole.cpp  DebugConsole.h  DisplayDevice.cpp  DisplayDevice.h  DummyDisplayDevice.h  FbiStuff.cpp  FbiStuff.h  FbiStuffBit1.cpp  FbiStuffBit24.cpp  FbiStuffBmp.cpp  FbiStuffDjvu.cpp  FbiStuffFbtools.cpp  FbiStuffFbtools.h  FbiStuffGif.cpp  FbiStuffJasPer.cpp  FbiStuffJpeg.cpp  FbiStuffList.h  FbiStuffLoader.cpp  FbiStuffLoader.h  FbiStuffMagick.cpp  FbiStuffMatrixMarket.cpp  FbiStuffPcx.cpp  (+85 more)
src/debian/: control
src/fbi_src/: bmp.c  dither.c  dither.h  fb-gui.c  fb-gui.h  fbi.c  fbtools.c  fbtools.h  filter.c  filter.h  fs.c  fs.h  gif.c  jpeg.c  lirc.h  list.h  loader.c  loader.h  misc.h  op.c  op.h  pcd.c  png.c  ppm.c  tiff.c
src/fbi_src/debian/: changelog  fbi.files  mime  postinst  rules
src/fbi_src/mk/: Variables.mk
src/fbi_src/old/debian/: control  copyright
src/mk/: bmp.dep  curl.dep  dither.dep  exiftran.dep  fb-gui.dep  fbi.dep  fbtools.dep  filter.dep  fs.dep  jpeg.dep  jpeg_transupp.dep  jpegtools.dep  loader.dep  op.dep  png.dep  ppm.dep  tiff.dep
src/testdir/: Makefile  test13.in  test14.in  test14.ok  test15.in  test17.in  test17.ok  test18.in  test18.ok  test19.ok  test2.in  test2.ok  test20.in  test20.ok  test22.in  test22.ok  test3.in  test7.in  test8.in
tags/fim-0.3-alpha/: INSTALL  README  TODO  configure.ac
tags/fim-0.3-beta/: ChangeLog  TODO
trunk/: BUGS  ChangeLog  Dockerfile  FAQ.TXT  INSTALL  Makefile.am  NEWS  NEWS.in  README  README.md  THANKS  TODO  VERSION  autogen.sh  config.h.in  configure.ac
trunk/debian/: .control.swo  README.Debian  changelog  control  copyright  fim.doc-base.EX  menu.ex  postinst.ex  preinst.ex  substvars  watch  watch.ex
trunk/distros/: Makefile.am
trunk/doc/: FIM.TXT  Makefile.am  Makefile.old  fim.man  fim.man.in  fimgs.man  fimgs.man.in  fimrc.man  fimrc.man.in
trunk/media/multipage/: Makefile.am
trunk/scripts/: Makefile.am
trunk/scripts/maintenance/: configure-brute-check.sh  configure-minimal.sh  configure-noscripting.sh  cron-build.sh.in  cron-svndump.pl.in  live-test.sh
trunk/scripts/tests/: font.sh  sanity.fim  spawn_and_quit.exp  version.sh
trunk/src/: AADevice.cpp  AADevice.h  Arg.cpp  Arg.h  Benchmarkable.h  Browser.cpp  Browser.h  CACADevice.cpp  CACADevice.h  Cache.cpp  Cache.h  Command.cpp  Command.h  CommandConsole-cmd.cpp  CommandConsole-help.cpp  CommandConsole-init.cpp  CommandConsole-var.cpp  CommandConsole.cpp  CommandConsole.h  DebugConsole.cpp  DebugConsole.h  DisplayDevice.cpp  DisplayDevice.h  DummyDisplayDevice.h  FbiStuff.cpp  FbiStuff.h  FbiStuffAVIF.cpp  FbiStuffBit1.cpp  FbiStuffBit24.cpp  FbiStuffBmp.cpp  FbiStuffDjvu.cpp  FbiStuffFbtools.cpp  FbiStuffGif.cpp  FbiStuffJasPer.cpp  FbiStuffJpeg.cpp  FbiStuffList.h  FbiStuffLoader.cpp  FbiStuffLoader.h  FbiStuffMagick.cpp  FbiStuffMatrixMarket.cpp  (+62 more)
trunk/src/testdir/: Makefile  test12.in  test13.in  test14.in  test14.ok  test17.in  test19.in  test19.ok  test20.in  test20.ok  test4.in  test5.in  test5.ok  test7.in  test8.in  test9.in  test9.ok
trunk/var/: Makefile  index.html.in
var/: Makefile  index.html.in
var/www/: fim.css
(+226 files in other folders)
